# repomind

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
repomind/: __init__.py  api.py  chat_engine.py  chunking.py  cli.py  config.py  indexer.py  main.py  models.py  router.py  stats.py
repomind/generation/: __init__.py  code_generator.py  scaffold.py  suggestions.py
repomind/graph/: __init__.py  builder.py  query.py
repomind/parser/: __init__.py  ast_parser.py  languages.py  smart_chunker.py
repomind/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_compatible.py  registry.py
repomind/retrieval/: __init__.py  hybrid_retriever.py  repo_map.py
repomind/understanding/: __init__.py  analyzer.py  knowledge_base.py  pattern_extractor.py  summarizer.py
static/: app.js  index.html  styles.css
tests/: fakes.py  test_api.py  test_chat_engine.py  test_chunking.py  test_indexer.py  test_router.py
